<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>twentyten-launcher</artifactId>

  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Build-Time>${version}</Build-Time>
            </manifestEntries>
          </archive>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.0</version>
      </plugin>
      <plugin>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
        <artifactId>maven-shade-plugin</artifactId>
        <configuration>
          <artifactSet>
            <includes>
              <include>*:*:*</include>
            </includes>
          </artifactSet>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/maven/**</exclude>
                <exclude>META-INF/MANIFEST.MF</exclude>
                <exclude>META-INF/DEPENDENCIES</exclude>
                <exclude>META-INF/LICENSE</exclude>
                <exclude>META-INF/NOTICE</exclude>
              </excludes>
            </filter>
          </filters>
          <outputFile>${project.build.directory}/${project.build.finalName}.jar</outputFile>
          <transformers>
            <transformer
              implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>io.github.kawaxte.twentyten.launcher.Launcher</mainClass>
            </transformer>
          </transformers>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <inherited>true</inherited>
        <version>3.4.1</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5-fluent -->
    <dependency>
      <artifactId>httpclient5-fluent</artifactId>
      <groupId>org.apache.httpcomponents.client5</groupId>
      <version>5.2.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.core5/httpcore5 -->
    <dependency>
      <artifactId>httpcore5</artifactId>
      <groupId>org.apache.httpcomponents.core5</groupId>
      <version>5.2.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.json/json -->
    <dependency>
      <artifactId>json</artifactId>
      <groupId>org.json</groupId>
      <version>20230227</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.26</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
    <dependency>
      <artifactId>log4j-api</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>2.20.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
    <dependency>
      <artifactId>log4j-core</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>2.20.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
    <dependency>
      <artifactId>log4j-slf4j-impl</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>2.20.0</version>
    </dependency>
  </dependencies>

  <description>Resurrection of Minecraft Launcher from 2010</description>
  <groupId>io.github.kawaxte</groupId>
  <inceptionYear>2022</inceptionYear>
  <modelVersion>4.0.0</modelVersion>
  <name>${project.groupId}:${project.artifactId}</name>

  <properties>
    <maven.build.timestamp.format>M.ddyy</maven.build.timestamp.format>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.major>1</version.major>
    <version.minor>06</version.minor>
  </properties>

  <repositories>
    <repository>
      <id>scijava.public</id>
      <url>https://maven.scijava.org/content/repositories/public/</url>
    </repository>
  </repositories>

  <!--
  <version>${version.major}.${maven.build.timestamp}_${version.minor}</version>
  -->
  <version>${version.major}.${maven.build.timestamp}_${version.minor}</version>
</project>